Added script in html file to allow navbar to control the rendering of modules

--- a/public/index.html
+++ b/public/index.html
@@ -6,44 +6,75 @@
     <link href="https://d3mlfyygrfdi2i.cloudfront.net/favicon.png?v=2" rel="icon" type="image/png">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="http://localhost:3002/styles.css">
+    <link rel="stylesheet" href="http://localhost:3003/styles.css">
+    <link rel="stylesheet" href="http://localhost:3004/styles.css">
     <link rel="stylesheet" href="http://localhost:3005/styles.css">
     <title>NotAirBnB</title>
   </head>
   <body>
-    <div id="Summary"></div>
-    <div id="Navbar"></div>
-    <div id="Campaign"></div>
-    <div id="Updates"></div>
-    <div id="Community"></div>
+    <div id="application">
+      <div id="Summary"></div>
+      <div id="Navbar"></div>
+      <div id="Campaign"></div>
+      <div id="Updates" class="hidden"></div>
+      <div id="Community" class="hidden"></div>
+    </div>
+    <script>
+      
+    </script>
     <script src="lib/react-development.js"></script>
     <script src="lib/react-dom.development.js"></script>
-    <!-- <script src="http://localhost:3001/app.js"></script> -->
+    <script src="http://localhost:3001/bundle.js"></script>
     <script src="http://localhost:3002/bundle.js"></script>
-    <!-- <script src="http://localhost:3003/app.js"></script>
-    <script src="http://localhost:3004/app.js"></script> -->
+    <script src="http://localhost:3003/bundle.js"></script>
+    <script src="http://localhost:3004/bundle.js"></script>
     <script src="http://localhost:3005/bundle.js"></script>
-    <!-- see: https://reactjs.org/docs/react-without-jsx.html -->
     <script>
-      // ReactDOM.render(
-      //   React.createElement(Summary),
-      //   document.getElementById('Summary')
-      // );
-      // ReactDOM.render(
-      //   React.createElement(Navbar),
-      //   document.getElementById('Navbar')
-      // );
-      // ReactDOM.render(
-      //   React.createElement(Campaign),
-      //   document.getElementById('Campaign')
-      // );
-      // ReactDOM.render(
-      //   React.createElement(Updates),
-      //   document.getElementById('Updates')
-      // );
-      // ReactDOM.render(
-      //   React.createElement(Community),
-      //   document.getElementById('Community')
-      // );
+      const navbar = document.getElementsByClassName('navbarContainerWrapper')[0];
+
+      window.addEventListener('scroll', () => {  
+        const summary = document.getElementById('Summary');
+        if (navbar.classList.contains('sticky')) {
+          if (summary.getBoundingClientRect().top > -730) {
+            navbar.classList.remove('sticky');
+          }
+        } else {
+          if (navbar.getBoundingClientRect().top < 0) {
+            navbar.classList.add('sticky');
+          }
+        }
+      }, true);
+
+      const campaignButton = document.getElementById('campaign');
+      const faqButton = document.getElementById('faq');
+      const updatesButton = document.getElementById('updates');
+      const commentsButton = document.getElementById('comments');
+      const communityButton = document.getElementById('community');
+      let previouslyRendered = 'Campaign';
+      let component;
+
+      const hideComponent = (component) => {
+        component = document.getElementById(previouslyRendered);
+        component.classList.add('hidden');
+      }
+      campaignButton.addEventListener('click', () => {
+        hideComponent(previouslyRendered);
+        const Campaign = document.getElementById('Campaign');
+        Campaign.classList.remove('hidden');
+        previouslyRendered = 'Campaign';
+      });
+      updatesButton.addEventListener('click', () => {
+        hideComponent(previouslyRendered);
+        const Updates = document.getElementById('Updates');
+        Updates.classList.remove('hidden');
+        previouslyRendered = 'Updates';
+      });
+      communityButton.addEventListener('click', () => {
+        hideComponent(previouslyRendered);
+        const Community = document.getElementById('Community');
+        Community.classList.remove('hidden');
+        previouslyRendered = 'Community';
+      });
     </script>
   </body>
 </html>
