changed references to Amazon S3 Bucket, but data doesn't populate without you running database on your local machine

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
     <link href="https://d3mlfyygrfdi2i.cloudfront.net/favicon.png?v=2" rel="icon" type="image/png">
     <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="http://localhost:3002/styles.css">
-    <link rel="stylesheet" href="http://localhost:3003/styles.css">
-    <link rel="stylesheet" href="http://localhost:3004/styles.css">
-    <link rel="stylesheet" href="http://localhost:3006/styles.css">
+    <link rel="stylesheet" href="http://www.samgetlan.com/navbar/styles.css">
+    <link rel="stylesheet" href="http://www.samgetlan.com/campaign/styles.css">
+    <link rel="stylesheet" href="http://www.samgetlan.com/updates/styles.css">
+    <link rel="stylesheet" href="http://www.samgetlan.com/community/styles.css">
     <title>NotAirBnB</title>
   </head>
   <body>
@@ -22,12 +22,12 @@
     </div>
     <script src="lib/react-development.js"></script>
     <script src="lib/react-dom.development.js"></script>
-    <script src="http://localhost:3001/bundle.js"></script>
-    <script src="http://localhost:3002/bundle.js"></script>
-    <script src="http://localhost:3003/bundle.js"></script>
-    <script src="http://localhost:3004/bundle.js"></script>
-    <script src="http://localhost:3005/bundle.js"></script>
-    <script src="http://localhost:3006/bundle.js"></script>
-    <script src="http://localhost:3002/navbarControl.js"></script>
+    <script src="http://www.samgetlan.com/summary/bundle.js"></script>
+    <script src="http://www.samgetlan.com/navbar/bundle.js"></script>
+    <script src="http://www.samgetlan.com/campaign/bundle.js"></script>
+    <script src="http://www.samgetlan.com/updates/bundle.js"></script>
+    <script src="http://www.samgetlan.com/comments/bundle.js"></script>
+    <script src="http://www.samgetlan.com/community/bundle.js"></script>
+    <script src="http://www.samgetlan.com/navbar/navbarControl.js"></script>
   </body>
 </html>
